Tweak sapphire config to better match dream config
Change-Id: I7cb71c89e8643b231173f9f219f8e2d00b5b5c7d

--- a/recovery/images/README
+++ b/recovery/images/README
@@ -1,6 +1,6 @@
 This directory contains the firmware_install.565 and
 firmware_error.565 bitmaps shown when installing a radio or hboot
-update via OTA on a sapphire device.
+update via OTA on this device.
 
 They were generated from the corresponding .png files by doing:
 
